--- a/05_recurrent_neural_networks/bahdanau_template.ipynb
+++ b/05_recurrent_neural_networks/bahdanau_template.ipynb
@@ -259,7 +259,23 @@
    "id": "697cd638",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Bahdanau Attention\n",
+    "class BahdanauAttention(tf.keras.layers.Layer):\n",
+    "    def __init__(self, units):\n",
+    "        super(BahdanauAttention, self).__init__()\n",
+    "        self.W1 = tf.keras.layers.Dense(units)\n",
+    "        self.W2 = tf.keras.layers.Dense(units)\n",
+    "        self.V = tf.keras.layers.Dense(1)\n",
+    "\n",
+    "    def call(self, prev_decoder_state, encoder_state):\n",
+    "        query_with_time_axis = tf.expand_dims(prev_decoder_state, 1)\n",
+    "        scores = self.V(tf.nn.tanh(self.W1(query_with_time_axis) + self.W2(encoder_state)))\n",
+    "        attention_weights = tf.nn.softmax(scores, axis=1)\n",
+    "        context_vector = attention_weights * encoder_state\n",
+    "        context_vector = tf.reduce_sum(context_vector, axis=1)\n",
+    "        return context_vector, attention_weights"
+   ]
   }
  ],
  "metadata": {
